--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "engines": {
-    "node": ">=16",
+    "node": ">=18",
     "pnpm": ">=7"
   },
   "scripts": {
@@ -23,8 +23,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
-    "@vercel/og": "^0.5.6",
+    "@vercel/og": "^0.5.8",
     "clsx": "^1.2.1",
+    "email-validator": "^2.0.4",
     "is-empty-iterable": "^3.0.0",
     "next": "13.4.6",
     "react": "18.2.0",
@@ -32,18 +33,18 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.34.3",
+    "@playwright/test": "^1.35.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@vercel/git-hooks": "^1.0.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.4",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.7",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-unicorn": "^47.0.0",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^13.2.3",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
