--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.35.1",
@@ -50,7 +51,6 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^9.0.0",
     "prettier": "^2.8.8",
-    "react-slick": "^0.29.0",
     "sass": "^1.63.6",
     "typescript": "5.1.3"
   }
