--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vercel/og": "^0.5.8",
     "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
+    "framer-motion": "^10.12.18",
     "is-empty-iterable": "^3.0.0",
     "next": "13.4.6",
     "path": "^0.12.7",
