--- a/package.json
+++ b/package.json
@@ -25,26 +25,32 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@react-spring/web": "^9.7.3",
     "@vercel/og": "^0.5.8",
+    "build": "^0.1.4",
     "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
-    "framer-motion": "^10.12.18",
+    "gsap": "^3.12.2",
     "is-empty-iterable": "^3.0.0",
     "next": "13.4.6",
     "path": "^0.12.7",
+    "pnpm": "^8.6.6",
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.35.1",
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@vercel/git-hooks": "^1.0.0",
     "autoprefixer": "^10.4.14",
+    "body-scroll-lock": "4.0.0-beta.0",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.7",
     "eslint-config-prettier": "^8.8.0",
