--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "build": "^0.1.4",
     "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
+    "framer-motion": "^10.12.18",
     "gsap": "^3.12.2",
     "is-empty-iterable": "^3.0.0",
     "next": "13.4.6",
