--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-image-gallery": "^1.2.12",
     "react-modal": "^3.16.1",
-    "sharp": "^0.32.1"
+    "react-slick": "^0.29.0",
+    "sharp": "^0.32.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.35.1",
