--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "webhooks": "ngrok http 3000"
   },
   "git": {
-    "pre-commit": "eslint \"***/**/*.{tsx,ts,js}\" --fix && stylelint \"***/**/*.scss\" --fix"
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*": "prettier --write --ignore-unknown"
