--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@react-email/render": "^0.0.7",
     "@react-spring/web": "^9.7.3",
     "@vercel/og": "^0.5.8",
     "build": "^0.1.4",
@@ -33,13 +34,16 @@
     "framer-motion": "^10.12.18",
     "gsap": "^3.12.2",
     "is-empty-iterable": "^3.0.0",
+    "mailersend": "^2.2.0",
     "next": "13.4.6",
+    "nodemailer": "^6.9.3",
     "path": "^0.12.7",
     "pnpm": "^8.6.6",
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "sharp": "^0.32.1",
@@ -49,6 +53,7 @@
     "@playwright/test": "^1.35.1",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "20.2.5",
+    "@types/nodemailer": "^6.4.8",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@vercel/git-hooks": "^1.0.0",
