--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-slick": "^0.29.0",
     "resend": "^0.17.1",
     "sharp": "^0.32.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "stylelint": "^15.10.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.35.1",
