--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-email/html": "0.0.4",
     "@react-email/render": "^0.0.7",
     "@react-spring/web": "^9.7.3",
+    "@shopify/shopify-api": "^7.5.0",
     "@vercel/og": "^0.5.8",
     "build": "^0.1.4",
     "clsx": "^1.2.1",
@@ -37,6 +38,7 @@
     "framer-motion": "^10.12.18",
     "gsap": "^3.12.2",
     "is-empty-iterable": "^3.0.0",
+    "js-cookie": "^3.0.5",
     "mailersend": "^2.2.0",
     "next": "13.4.6",
     "nodemailer": "^6.9.3",
@@ -58,6 +60,7 @@
   "devDependencies": {
     "@playwright/test": "^1.35.1",
     "@types/body-scroll-lock": "^3.1.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "20.2.5",
     "@types/nodemailer": "^6.4.8",
     "@types/react": "18.2.8",
@@ -66,7 +69,7 @@
     "autoprefixer": "^10.4.14",
     "body-scroll-lock": "4.0.0-beta.0",
     "eslint": "^8.44.0",
-    "eslint-config-next": "^13.4.7",
+    "eslint-config-next": "^13.4.8",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-unicorn": "^47.0.0",
     "lint-staged": "^13.2.3",
