--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "@shopify/koa-shopify-auth": "^5.0.3",
     "@shopify/shopify-api": "^7.5.0",
     "@vercel/og": "^0.5.9",
-    "actions": "link:@shopify/app-bridge/actions",
+    "actions": "link:@shopify\\app-bridge\\actions",
     "build": "^0.1.4",
     "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
-    "framer-motion": "^10.13.0",
+    "framer-motion": "^10.13.1",
     "gsap": "^3.12.2",
     "is-empty-iterable": "^3.0.0",
     "js-cookie": "^3.0.5",
@@ -80,7 +80,7 @@
     "eslint-plugin-unicorn": "^47.0.0",
     "lint-staged": "^13.2.3",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^9.0.0",
+    "postcss-preset-env": "^9.1.0",
     "prettier": "^2.8.8",
     "sass": "^1.64.1",
     "typescript": "5.1.3"
