--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@shopify/shopify-api": "^7.5.0",
     "@vercel/og": "^0.5.9",
     "actions": "link:@shopify\\app-bridge\\actions",
+    "axios": "^1.4.0",
     "build": "^0.1.4",
     "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
@@ -44,6 +45,7 @@
     "gsap": "^3.12.2",
     "is-empty-iterable": "^3.0.0",
     "js-cookie": "^3.0.5",
+    "js-sha256": "^0.9.0",
     "mailersend": "^2.2.0",
     "next": "13.4.6",
     "next-session": "^4.0.5",
