--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "js-sha256": "^0.9.0",
     "mailersend": "^2.2.0",
     "next": "13.4.6",
+    "next-recaptcha-v3": "^1.2.0",
     "next-session": "^4.0.5",
     "nodemailer": "^6.9.4",
     "path": "^0.12.7",
@@ -60,6 +61,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "resend": "^0.17.1",
