--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
     "framer-motion": "^10.13.1",
-    "gsap": "^3.12.2",
     "is-empty-iterable": "^3.0.0",
     "js-cookie": "^3.0.5",
     "js-sha256": "^0.9.0",
+    "libphonenumber-js": "^1.10.38",
     "mailersend": "^2.2.0",
     "next": "13.4.6",
     "next-recaptcha-v3": "^1.2.0",
@@ -58,8 +58,6 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-email": "1.9.4",
-    "react-google-recaptcha": "^3.1.0",
-    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
