--- a/package.json
+++ b/package.json
@@ -29,10 +29,6 @@
     "@react-email/button": "0.0.9",
     "@react-email/html": "0.0.4",
     "@react-email/render": "^0.0.7",
-    "@shopify/app-bridge": "^3.7.8",
-    "@shopify/app-bridge-react": "^3.7.8",
-    "@shopify/app-bridge-utils": "^3.5.1",
-    "@shopify/koa-shopify-auth": "^5.0.3",
     "@shopify/shopify-api": "^7.5.0",
     "@vercel/og": "^0.5.9",
     "actions": "link:@shopify\\app-bridge\\actions",
@@ -55,6 +51,7 @@
     "postcss": "^8.4.27",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "18.2.0",
     "react-email": "1.9.4",
     "react-hook-form": "^7.45.2",
