--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-cookie-consent": "^8.0.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-email": "1.9.4",
     "react-hook-form": "^7.45.2",
