--- a/package.json
+++ b/package.json
@@ -25,64 +25,64 @@
     "*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
+    "@headlessui/react": "^1.7.17",
     "@react-email/button": "0.0.9",
     "@react-email/html": "0.0.4",
     "@react-email/render": "^0.0.7",
-    "@shopify/shopify-api": "^7.5.0",
-    "@vercel/og": "^0.5.9",
-    "actions": "link:@shopify\\app-bridge\\actions",
-    "axios": "^1.4.0",
+    "@shopify/shopify-api": "^7.6.0",
+    "@vercel/og": "^0.5.13",
+    "actions": "link:@shopify/app-bridge/actions",
+    "axios": "^1.5.0",
     "build": "^0.1.4",
     "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
-    "framer-motion": "^10.13.1",
+    "framer-motion": "^10.16.2",
     "is-empty-iterable": "^3.0.0",
     "js-cookie": "^3.0.5",
     "js-sha256": "^0.9.0",
-    "libphonenumber-js": "^1.10.38",
+    "libphonenumber-js": "^1.10.44",
     "mailersend": "^2.2.0",
-    "next": "13.4.6",
+    "next": "13.4.19",
     "next-recaptcha-v3": "^1.2.0",
     "next-session": "^4.0.5",
     "nodemailer": "^6.9.4",
     "path": "^0.12.7",
-    "pnpm": "^8.6.10",
-    "postcss": "^8.4.27",
+    "pnpm": "^8.7.1",
+    "postcss": "^8.4.29",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-cookie-consent": "^8.0.1",
     "react-dom": "18.2.0",
     "react-email": "1.9.4",
-    "react-hook-form": "^7.45.2",
+    "react-hook-form": "^7.46.0",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
-    "resend": "^0.17.1",
-    "sharp": "^0.32.4",
+    "resend": "^0.17.2",
+    "sharp": "^0.32.5",
     "slick-carousel": "^1.8.1",
-    "stylelint": "^15.10.2"
+    "stylelint": "^15.10.3"
   },
   "devDependencies": {
-    "@playwright/test": "^1.36.1",
+    "@playwright/test": "^1.37.1",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "20.2.5",
-    "@types/nodemailer": "^6.4.8",
+    "@types/nodemailer": "^6.4.9",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@vercel/git-hooks": "^1.0.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.15",
     "body-scroll-lock": "4.0.0-beta.0",
-    "eslint": "^8.45.0",
-    "eslint-config-next": "^13.4.12",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^8.48.0",
+    "eslint-config-next": "^13.4.19",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-unicorn": "^47.0.0",
-    "lint-staged": "^13.2.3",
+    "lint-staged": "^13.3.0",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^9.1.0",
+    "postcss-preset-env": "^9.1.3",
     "prettier": "^2.8.8",
-    "sass": "^1.64.1",
+    "sass": "^1.66.1",
     "typescript": "5.1.3"
   }
 }
