--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@react-email/html": "0.0.4",
     "@react-email/render": "^0.0.7",
     "@shopify/shopify-api": "^7.7.0",
-    "@vercel/og": "^0.5.16",
-    "actions": "link:@shopify/app-bridge/actions",
-    "axios": "^1.5.0",
+    "@vercel/og": "^0.5.20",
+    "actions": "link:@shopify\\app-bridge\\actions",
+    "axios": "^1.6.0",
     "build": "^0.1.4",
     "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
@@ -40,48 +40,48 @@
     "is-empty-iterable": "^3.0.0",
     "js-cookie": "^3.0.5",
     "js-sha256": "^0.9.0",
-    "libphonenumber-js": "^1.10.44",
+    "libphonenumber-js": "^1.10.49",
     "mailersend": "^2.2.0",
-    "next": "13.5.2",
+    "next": "14.0.0",
     "next-recaptcha-v3": "^1.2.0",
     "next-session": "^4.0.5",
-    "nodemailer": "^6.9.5",
+    "nodemailer": "^6.9.7",
     "path": "^0.12.7",
-    "pnpm": "^8.7.6",
-    "postcss": "^8.4.30",
+    "pnpm": "^8.10.0",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-cookie-consent": "^8.0.1",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.46.2",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "resend": "^0.17.2",
     "sharp": "^0.32.6",
     "slick-carousel": "^1.8.1",
-    "stylelint": "^15.10.3"
+    "stylelint": "^15.11.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.38.1",
-    "@types/body-scroll-lock": "^3.1.0",
-    "@types/js-cookie": "^3.0.4",
+    "@playwright/test": "^1.39.0",
+    "@types/body-scroll-lock": "^3.1.1",
+    "@types/js-cookie": "^3.0.5",
     "@types/node": "20.2.5",
-    "@types/nodemailer": "^6.4.10",
+    "@types/nodemailer": "^6.4.13",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@vercel/git-hooks": "^1.0.0",
     "autoprefixer": "^10.4.16",
     "body-scroll-lock": "4.0.0-beta.0",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^13.5.2",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-unicorn": "^47.0.0",
     "lint-staged": "^13.3.0",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^9.1.4",
+    "postcss-preset-env": "^9.2.0",
     "prettier": "^2.8.8",
-    "sass": "^1.68.0",
+    "sass": "^1.69.5",
     "typescript": "5.1.3"
   }
 }
