--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@react-email/render": "^0.0.7",
     "@shopify/shopify-api": "^7.7.0",
     "@vercel/og": "^0.5.20",
-    "actions": "link:@shopify\\app-bridge\\actions",
-    "axios": "^1.6.0",
+    "actions": "link:@shopify/app-bridge/actions",
+    "axios": "^1.6.1",
     "build": "^0.1.4",
     "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
@@ -43,17 +43,17 @@
     "libphonenumber-js": "^1.10.49",
     "mailersend": "^2.2.0",
     "next": "14.0.2",
-    "next-recaptcha-v3": "^1.2.0",
+    "next-recaptcha-v3": "^1.3.0",
     "next-session": "^4.0.5",
     "nodemailer": "^6.9.7",
     "path": "^0.12.7",
-    "pnpm": "^8.10.0",
+    "pnpm": "^8.10.3",
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-cookie-consent": "^8.0.1",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
@@ -64,22 +64,22 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
-    "@types/body-scroll-lock": "^3.1.1",
-    "@types/js-cookie": "^3.0.5",
+    "@types/body-scroll-lock": "^3.1.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.2.5",
-    "@types/nodemailer": "^6.4.13",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@vercel/git-hooks": "^1.0.0",
     "autoprefixer": "^10.4.16",
     "body-scroll-lock": "4.0.0-beta.0",
-    "eslint": "^8.52.0",
+    "eslint": "^8.53.0",
     "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-unicorn": "^47.0.0",
     "lint-staged": "^13.3.0",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^9.2.0",
+    "postcss-preset-env": "^9.3.0",
     "prettier": "^2.8.8",
     "sass": "^1.69.5",
     "typescript": "5.1.3"
