--- a/package.json
+++ b/package.json
@@ -25,36 +25,36 @@
     "*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@hookform/resolvers": "^3.3.2",
+    "@headlessui/react": "^1.7.18",
+    "@hookform/resolvers": "^3.3.4",
     "@react-email/button": "0.0.9",
     "@react-email/html": "0.0.4",
     "@react-email/render": "^0.0.7",
     "@shopify/shopify-api": "^7.7.0",
     "@vercel/og": "^0.5.20",
-    "actions": "link:@shopify/app-bridge/actions",
-    "axios": "^1.6.2",
+    "actions": "link:@shopify\\app-bridge\\actions",
+    "axios": "^1.6.5",
     "build": "^0.1.4",
     "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^10.18.0",
     "is-empty-iterable": "^3.0.0",
     "js-cookie": "^3.0.5",
     "js-sha256": "^0.9.0",
-    "libphonenumber-js": "^1.10.52",
+    "libphonenumber-js": "^1.10.53",
     "mailersend": "^2.2.0",
-    "next": "14.0.4",
+    "next": "14.1.0",
     "next-recaptcha-v3": "^1.3.0",
     "next-session": "^4.0.5",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^6.9.8",
     "path": "^0.12.7",
-    "pnpm": "^8.12.1",
-    "postcss": "^8.4.32",
+    "pnpm": "^8.14.1",
+    "postcss": "^8.4.33",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-cookie-consent": "^8.0.1",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
@@ -65,7 +65,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.1",
+    "@playwright/test": "^1.41.1",
     "@types/body-scroll-lock": "^3.1.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "20.2.5",
@@ -73,7 +73,7 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@vercel/git-hooks": "^1.0.0",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "body-scroll-lock": "4.0.0-beta.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^13.5.6",
@@ -83,7 +83,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^9.3.0",
     "prettier": "^2.8.8",
-    "sass": "^1.69.5",
+    "sass": "^1.70.0",
     "typescript": "5.1.3"
   }
 }
