--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@react-email/render": "^0.0.7",
     "@shopify/shopify-api": "^7.7.0",
     "@vercel/og": "^0.5.20",
-    "actions": "link:@shopify\\app-bridge\\actions",
-    "axios": "^1.6.5",
+    "actions": "link:@shopify/app-bridge/actions",
+    "axios": "^1.6.7",
     "build": "^0.1.4",
     "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
@@ -41,20 +41,20 @@
     "is-empty-iterable": "^3.0.0",
     "js-cookie": "^3.0.5",
     "js-sha256": "^0.9.0",
-    "libphonenumber-js": "^1.10.53",
+    "libphonenumber-js": "^1.10.54",
     "mailersend": "^2.2.0",
     "next": "14.1.0",
     "next-recaptcha-v3": "^1.3.0",
     "next-session": "^4.0.5",
-    "nodemailer": "^6.9.8",
+    "nodemailer": "^6.9.9",
     "path": "^0.12.7",
-    "pnpm": "^8.14.1",
+    "pnpm": "^8.15.1",
     "postcss": "^8.4.33",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-cookie-consent": "^8.0.1",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.49.3",
+    "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
@@ -65,7 +65,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.41.1",
+    "@playwright/test": "^1.41.2",
     "@types/body-scroll-lock": "^3.1.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "20.2.5",
