--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-email/button": "0.0.9",
     "@react-email/html": "0.0.4",
     "@react-email/render": "^0.0.7",
+    "@shopify/hydrogen-react": "^2024.1.1",
     "@shopify/shopify-api": "^7.7.0",
     "@vercel/og": "^0.5.20",
     "actions": "link:@shopify/app-bridge/actions",
